--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8674,205 +8674,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #8a17fa; }
+  background: #185915; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #49114e; }
+  background: #5834de; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #45c71f; }
+  background: #7bdd3b; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #b9156e; }
+  background: #d3dfc1; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #53ab0b; }
+  background: #62beee; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #d288e0; }
+  background: #1b70aa; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #4d16a1; }
+  background: #35479c; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #a90585; }
+  background: #0ef36e; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #0159bb; }
+  background: #cf6ad0; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #021b18; }
+  background: #8ad95d; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #754a45; }
+  background: #c7bca6; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #13934e; }
+  background: #a1c590; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #de78dd; }
+  background: #2edafc; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #e8929c; }
+  background: #850c5f; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #eecb7f; }
+  background: #95606e; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #8ff7ae; }
+  background: #b232f3; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #79b9e1; }
+  background: #cb78c6; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #6c428a; }
+  background: #c09ebc; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #98ca17; }
+  background: #b34e7e; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #d484e8; }
+  background: #f0e183; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #6742f5; }
+  background: #3ae21c; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #4daf3b; }
+  background: #8eeb7b; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #796c3d; }
+  background: #98203f; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #f92d1c; }
+  background: #654a9d; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #57c9dd; }
+  background: #487651; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #1a292a; }
+  background: #ffa434; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #3fcde2; }
+  background: #2e8805; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #fb7262; }
+  background: #5c598e; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #cc6d2d; }
+  background: #ce53d0; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #f0c4c1; }
+  background: #3b7ab0; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #658b6b; }
+  background: #774c83; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #ff1357; }
+  background: #08c178; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #ab0bea; }
+  background: #41261f; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #58206f; }
+  background: #04aac4; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #b733d7; }
+  background: #7143ec; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #cf2b44; }
+  background: #0cee4a; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #64f5d6; }
+  background: #aa1710; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #111309; }
+  background: #58ac14; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #f73023; }
+  background: #c79d65; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #a1b33e; }
+  background: #402e56; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #4f962c; }
+  background: #9309da; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #3e5616; }
+  background: #7a4284; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #76d0ac; }
+  background: #627762; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #dfa47d; }
+  background: #38c054; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #336525; }
+  background: #f7a09c; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #af54fe; }
+  background: #8577cb; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #efd237; }
+  background: #d0be3a; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #546433; }
+  background: #d8ae02; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #0c18cb; }
+  background: #36f358; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #a962eb; }
+  background: #78638f; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #a0d81a; }
+  background: #b57f4c; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #c69ac8; }
+  background: #708829; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #43dc34; }
+  background: #2bf797; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #ae0d1b; }
+  background: #518626; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #c3a024; }
+  background: #0dd926; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #37cf32; }
+  background: #e6c41d; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #43b71d; }
+  background: #d5fc9d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #6d0b07; }
+  background: #10e1bf; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #669a60; }
+  background: #11a569; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #c893dd; }
+  background: #fb5cd5; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #8a027b; }
+  background: #c6f52d; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #ad9e73; }
+  background: #63d7b0; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #cfc270; }
+  background: #18c646; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #706f58; }
+  background: #2ff936; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #4fc616; }
+  background: #d51c4e; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #f54c77; }
+  background: #289ac3; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #23c18e; }
+  background: #e716af; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #b7657a; }
+  background: #38cba0; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #c488fa; }
+  background: #183d06; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #67f98e; }
+  background: #86b7ad; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #c05512; }
+  background: #742b4a; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #28fac4; }
+  background: #487e8f; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #b12762; }
+  background: #75c243; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #cdedc8; }
+  background: #9159bb; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #8f4b80; }
+  background: #1f8fae; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #b3488e; }
+  background: #64b428; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #853111; }
+  background: #5fcc7e; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #7be23f; }
+  background: #0d6d9d; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #21c78b; }
+  background: #aff86d; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #e8ee32; }
+  background: #0633d9; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #7f1dbc; }
+  background: #06a352; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #254671; }
+  background: #b154ee; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #a00eea; }
+  background: #09b4a5; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #7a5101; }
+  background: #1330c8; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #e407fb; }
+  background: #5463f8; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #215d4f; }
+  background: #c514e3; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #75f562; }
+  background: #ebc14c; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #ffccc4; }
+  background: #17f1db; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #93a215; }
+  background: #0b30fb; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #602423; }
+  background: #102f5a; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #c9368f; }
+  background: #ff52ff; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #31327c; }
+  background: #56b1fc; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #f8aae7; }
+  background: #0a1769; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #0b1708; }
+  background: #8157c7; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #8a1098; }
+  background: #a49572; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #c4f445; }
+  background: #fee1f5; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #309c7a; }
+  background: #8a558b; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #434c65; }
+  background: #1d3d14; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #180b94; }
+  background: #01a708; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #706f43; }
+  background: #6bba64; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -13015,78 +13015,6 @@ select:focus {
         width: 300px; }
       .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img {
         width: 106px; } }
-.page-border-none {
-  margin-left: 0px;
-  border: 0px solid #ccc;
-  padding: 10px;
-  border-radius: 5px;
-  background: none;
-  color: #9DA6AF;
-  width: 65px; }
-
-.cursor-pointer {
-  cursor: pointer; }
-
-.filter-date-picker {
-  align-items: center; }
-
-.filter-date-picker .Connectors-top-searchbar-div {
-  margin-right: 15px;
-  margin-top: 0px;
-  margin-bottom: 0px; }
-
-.device-detail-adapter-connection-tab {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  align-items: center; }
-
-.device-detail-ac-title {
-  font-size: 22px;
-  text-transform: capitalize; }
-
-.device-detail-ac-img {
-  width: 40px !important; }
-
-.selected-tab-text[_ngcontent-wrg-c22]:focus {
-  outline: 0px #dcdde1 !important; }
-
-.tabs-aggre .nav-link button,
-.tabs-aggre .nav-link {
-  border: 0px solid #dcdde1 !important; }
-
-button:focus,
-input:focus,
-select:focus {
-  outline: 0px dotted !important;
-  outline: 0px auto -webkit-focus-ring-color !important; }
-
-button {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  outline: 0px solid #5e5e5e !important;
-  -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.2); }
-
-.device-disclosure .device-box-logo {
-  width: auto !important;
-  text-align: right; }
-
-.flex-align-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center; }
-
-.dashboard-search {
-  width: 100%;
-  margin-right: 10px; }
-
-.dashboard-search-select select {
-  border: none;
-  padding: 12px; }
-
 @media screen and (max-width: 767px) {
   .dashboard-container
   .dashboard-widget-container {
