--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -2427,6 +2427,7 @@ td {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+  border-radius: 0px !important;
 }
 
 button:focus,
