--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8674,205 +8674,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #185915; }
+  background: #3ccccc; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #5834de; }
+  background: #0a95da; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #7bdd3b; }
+  background: #0aade0; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #d3dfc1; }
+  background: #d4ff3b; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #62beee; }
+  background: #fb88c4; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #1b70aa; }
+  background: #35d593; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #35479c; }
+  background: #c9f63a; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #0ef36e; }
+  background: #288ac4; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #cf6ad0; }
+  background: #a2da28; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #8ad95d; }
+  background: #6f90eb; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #c7bca6; }
+  background: #ca62ce; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #a1c590; }
+  background: #d987bb; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #2edafc; }
+  background: #822b2c; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #850c5f; }
+  background: #53acf1; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #95606e; }
+  background: #ceb8b7; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #b232f3; }
+  background: #8e7714; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #cb78c6; }
+  background: #47f502; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #c09ebc; }
+  background: #af6776; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #b34e7e; }
+  background: #506588; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #f0e183; }
+  background: #e58fa8; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #3ae21c; }
+  background: #813a29; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #8eeb7b; }
+  background: #ae4956; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #98203f; }
+  background: #cef2bc; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #654a9d; }
+  background: #6612b0; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #487651; }
+  background: #4ad343; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #ffa434; }
+  background: #9c2c69; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #2e8805; }
+  background: #df66b8; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #5c598e; }
+  background: #d60148; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #ce53d0; }
+  background: #98c4a9; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #3b7ab0; }
+  background: #f727e1; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #774c83; }
+  background: #5f75cf; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #08c178; }
+  background: #aa19a6; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #41261f; }
+  background: #181598; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #04aac4; }
+  background: #69386a; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #7143ec; }
+  background: #4d5488; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #0cee4a; }
+  background: #7c3399; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #aa1710; }
+  background: #abe2c8; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #58ac14; }
+  background: #23896a; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #c79d65; }
+  background: #859ae1; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #402e56; }
+  background: #68dc41; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #9309da; }
+  background: #5849c2; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #7a4284; }
+  background: #1bdd9c; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #627762; }
+  background: #a71708; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #38c054; }
+  background: #20ea41; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #f7a09c; }
+  background: #1a0f21; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #8577cb; }
+  background: #bbb232; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #d0be3a; }
+  background: #10ac70; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #d8ae02; }
+  background: #9292df; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #36f358; }
+  background: #c64508; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #78638f; }
+  background: #5c772c; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #b57f4c; }
+  background: #c86b5a; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #708829; }
+  background: #54fc09; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #2bf797; }
+  background: #cab1d6; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #518626; }
+  background: #fa2088; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #0dd926; }
+  background: #23d8c6; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #e6c41d; }
+  background: #cc8348; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #d5fc9d; }
+  background: #ff057b; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #10e1bf; }
+  background: #349bc0; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #11a569; }
+  background: #2a22b9; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #fb5cd5; }
+  background: #58608a; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #c6f52d; }
+  background: #7d9180; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #63d7b0; }
+  background: #319b6d; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #18c646; }
+  background: #e1b2d7; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #2ff936; }
+  background: #9f9994; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #d51c4e; }
+  background: #831f22; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #289ac3; }
+  background: #1c9797; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #e716af; }
+  background: #4c0f99; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #38cba0; }
+  background: #60a5fd; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #183d06; }
+  background: #affefd; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #86b7ad; }
+  background: #4bec88; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #742b4a; }
+  background: #39a6ac; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #487e8f; }
+  background: #60bfaa; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #75c243; }
+  background: #60bb1c; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #9159bb; }
+  background: #ab9e29; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #1f8fae; }
+  background: #d5604f; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #64b428; }
+  background: #669a7e; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #5fcc7e; }
+  background: #e23e1c; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #0d6d9d; }
+  background: #7896c4; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #aff86d; }
+  background: #f0615d; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #0633d9; }
+  background: #a14774; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #06a352; }
+  background: #98d206; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #b154ee; }
+  background: #d3dccd; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #09b4a5; }
+  background: #94891e; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #1330c8; }
+  background: #2f7cb5; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #5463f8; }
+  background: #cf028d; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #c514e3; }
+  background: #ab9bb6; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #ebc14c; }
+  background: #b13caf; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #17f1db; }
+  background: #b01268; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #0b30fb; }
+  background: #6d9ce6; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #102f5a; }
+  background: #325f6f; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #ff52ff; }
+  background: #4b0d41; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #56b1fc; }
+  background: #3a1161; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #0a1769; }
+  background: #edd75e; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #8157c7; }
+  background: #bafacb; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #a49572; }
+  background: #0fd655; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #fee1f5; }
+  background: #7cb8b9; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #8a558b; }
+  background: #6334a4; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #1d3d14; }
+  background: #1e90f7; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #01a708; }
+  background: #a6fba4; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #6bba64; }
+  background: #2c1f1e; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12721,7 +12721,8 @@ td .check-container {
 .custom-select {
   -webkit-appearance: none;
   -moz-appearance: none;
-  appearance: none; }
+  appearance: none;
+  border-radius: 0px !important; }
 
 button:focus,
 input:focus,
