--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -7996,7 +7996,7 @@ body.menu-active #content .menu-trigger {
 
 .inner-tab-right-section {
   padding: 10px;
-  margin-top: 32px; }
+  margin-top: 15px; }
 
 .table-top-options-row {
   display: flex;
@@ -8674,205 +8674,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #3ccccc; }
+  background: #e419f5; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #0a95da; }
+  background: #7b2390; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #0aade0; }
+  background: #58073b; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #d4ff3b; }
+  background: #8ed522; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #fb88c4; }
+  background: #bdb081; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #35d593; }
+  background: #6e618f; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #c9f63a; }
+  background: #cf1b3b; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #288ac4; }
+  background: #6164c0; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #a2da28; }
+  background: #08f403; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #6f90eb; }
+  background: #08663e; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #ca62ce; }
+  background: #1c101b; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #d987bb; }
+  background: #977311; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #822b2c; }
+  background: #883efb; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #53acf1; }
+  background: #1e0dfe; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #ceb8b7; }
+  background: #ab91d3; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #8e7714; }
+  background: #fbd756; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #47f502; }
+  background: #e360b4; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #af6776; }
+  background: #bc7d11; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #506588; }
+  background: #c075b8; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #e58fa8; }
+  background: #409c03; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #813a29; }
+  background: #29f152; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #ae4956; }
+  background: #9c0779; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #cef2bc; }
+  background: #eb7cac; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #6612b0; }
+  background: #8b8c95; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #4ad343; }
+  background: #283f68; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #9c2c69; }
+  background: #835312; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #df66b8; }
+  background: #2d48b2; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #d60148; }
+  background: #6f7896; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #98c4a9; }
+  background: #29e694; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #f727e1; }
+  background: #985638; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #5f75cf; }
+  background: #6a851e; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #aa19a6; }
+  background: #e71e5e; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #181598; }
+  background: #856e73; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #69386a; }
+  background: #ce334f; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #4d5488; }
+  background: #83af07; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #7c3399; }
+  background: #892794; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #abe2c8; }
+  background: #394cf4; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #23896a; }
+  background: #c493d7; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #859ae1; }
+  background: #9472ed; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #68dc41; }
+  background: #ce1548; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #5849c2; }
+  background: #13902b; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #1bdd9c; }
+  background: #5f77f3; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #a71708; }
+  background: #c3a4c2; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #20ea41; }
+  background: #d9a151; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #1a0f21; }
+  background: #a131ac; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #bbb232; }
+  background: #591090; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #10ac70; }
+  background: #10d458; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #9292df; }
+  background: #ef5cb7; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #c64508; }
+  background: #f981f6; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #5c772c; }
+  background: #a5f80c; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #c86b5a; }
+  background: #8bbccd; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #54fc09; }
+  background: #8146c9; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #cab1d6; }
+  background: #8bcd7d; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #fa2088; }
+  background: #7de94d; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #23d8c6; }
+  background: #af746c; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #cc8348; }
+  background: #9b02c1; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #ff057b; }
+  background: #98afdd; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #349bc0; }
+  background: #a2e7a3; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #2a22b9; }
+  background: #89757a; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #58608a; }
+  background: #e37204; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #7d9180; }
+  background: #efa0b0; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #319b6d; }
+  background: #f6b217; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #e1b2d7; }
+  background: #4eead3; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #9f9994; }
+  background: #3b02a5; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #831f22; }
+  background: #cca137; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #1c9797; }
+  background: #8d3655; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #4c0f99; }
+  background: #8b8224; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #60a5fd; }
+  background: #c2e541; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #affefd; }
+  background: #c14dab; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #4bec88; }
+  background: #d8754f; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #39a6ac; }
+  background: #6c2583; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #60bfaa; }
+  background: #5a1d1c; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #60bb1c; }
+  background: #245434; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #ab9e29; }
+  background: #2958b1; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #d5604f; }
+  background: #bf5899; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #669a7e; }
+  background: #5b5fa0; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #e23e1c; }
+  background: #99fb9e; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #7896c4; }
+  background: #284067; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #f0615d; }
+  background: #71846f; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #a14774; }
+  background: #6b8c4b; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #98d206; }
+  background: #48fd16; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #d3dccd; }
+  background: #f8e441; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #94891e; }
+  background: #7c59cf; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #2f7cb5; }
+  background: #109ef1; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #cf028d; }
+  background: #094ade; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #ab9bb6; }
+  background: #c9ac0b; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #b13caf; }
+  background: #3dbc71; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #b01268; }
+  background: #55e455; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #6d9ce6; }
+  background: #babc24; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #325f6f; }
+  background: #cbfc94; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #4b0d41; }
+  background: #73bd47; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #3a1161; }
+  background: #307d13; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #edd75e; }
+  background: #60cc04; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #bafacb; }
+  background: #4ad17d; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #0fd655; }
+  background: #6d1182; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #7cb8b9; }
+  background: #f8b41c; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #6334a4; }
+  background: #f0c0e4; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #1e90f7; }
+  background: #333808; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #a6fba4; }
+  background: #cf71bb; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #2c1f1e; }
+  background: #55a1f8; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9172,7 +9172,7 @@ th {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
-  margin-top: 30px;
+  margin-top: 20px;
   flex-direction: column; }
   .dashboard-top-section-query .search-wrap {
     display: flex;
@@ -9194,7 +9194,8 @@ th {
       width: 100%;
       padding: 10px 10px;
       border: 0px solid #bababa;
-      padding-left: 40px; }
+      padding-left: 40px;
+      height: 40px; }
     .dashboard-top-section-query .search-wrap .search-query-dropdown-btn {
       position: absolute;
       right: 15px;
@@ -9205,7 +9206,7 @@ th {
       width: 20px; }
   .dashboard-top-section-query .search-section {
     width: 100%;
-    padding: 0px 20px; }
+    padding: 0px; }
     .dashboard-top-section-query .search-section .search-section-box {
       margin: auto;
       display: flex;
@@ -9310,7 +9311,7 @@ th {
 
 .device-result-export-row {
   display: flex;
-  padding: 0px 20px; }
+  padding: 0px; }
 
 .results-per-page {
   flex: 1;
@@ -9351,7 +9352,8 @@ th {
     width: 100%;
     padding: 12px 40px 12px 20px;
     border: 0px solid #bababa;
-    padding-right: 40px; }
+    padding-right: 40px;
+    height: 40px; }
 
 .page-heading {
   font-family: 'proxima-semi-bold';
@@ -9919,7 +9921,8 @@ table .bold-heading {
     padding: 10px 10px;
     border: 1px solid #bababa;
     padding-left: 40px;
-    outline: 0px !important; }
+    outline: 0px !important;
+    height: 40px; }
   .search-wrap-standard .search-query-dropdown-btn {
     position: absolute;
     right: 15px;
@@ -9980,6 +9983,12 @@ table .bold-heading {
     padding-right: 0px; }
   .tab-right-column-container .bottom-page .result-dropdown {
     margin-right: 0px; }
+
+.results-per-page {
+  padding-right: 0px; }
+
+.result-dropdown {
+  margin-right: -8px; }
 
 .table-extra-padding th {
   border-bottom: 0px solid #dee2e6;
@@ -10919,7 +10928,8 @@ input[type="checkbox"] {
   display: block; }
 
 .tab-right-column-container input[type="text"] {
-  padding-left: 40px; }
+  padding-left: 40px;
+  height: 40px; }
 
 .intro {
   display: flex;
@@ -11335,7 +11345,8 @@ input[type="submit"] {
   padding: 10px;
   margin-right: 12px;
   border: 0px solid #bababa;
-  padding-left: 40px; }
+  padding-left: 40px;
+  height: 40px; }
 
 .Connectors-top-searchbar-div .search-field {
   padding: 10px 10px 10px 20px; }
@@ -11901,7 +11912,7 @@ input:checked + .sliders:before {
         border-left: 8px solid #e0e0e1;
         position: absolute;
         top: 35%;
-        right: -8px; }
+        right: -7px; }
     .process-button-wrapper ul .no-arrow::before {
       content: "";
       display: none; }
@@ -11920,8 +11931,6 @@ input:checked + .sliders:before {
       padding: 26px 80px !important;
       color: #000;
       position: relative; }
-      .process-button-wrapper ul .sucess-active::before {
-        right: -5px; }
       .process-button-wrapper ul .sucess-active img {
         position: absolute;
         width: 25px;
@@ -11932,8 +11941,6 @@ input:checked + .sliders:before {
       border: 2px solid #776fff;
       color: #000;
       position: relative; }
-      .process-button-wrapper ul .sucess-active-small::before {
-        right: -5px; }
       .process-button-wrapper ul .sucess-active-small img {
         position: absolute;
         width: 20px;
@@ -11973,7 +11980,8 @@ input:checked + .sliders:before {
 .policy-search .search-wrap-standard input {
   padding: 10px 10px;
   padding-left: 20px;
-  border-radius: 0px; }
+  border-radius: 0px;
+  height: 40px !important; }
 
 .policy-accordions-wrapper .policy-accordions-box {
   margin: 12px 0px !important; }
@@ -12287,7 +12295,8 @@ input:checked + .sliders-Not .not-blue-bg {
 
 td .check-container {
   margin: 3px 0px 0px 0px;
-  padding: 0px; }
+  padding: 0px;
+  width: 20px; }
 
 .add-user-modal input[type="password"] {
   padding: 9px 16px; }
@@ -12729,6 +12738,18 @@ input:focus,
 select:focus {
   outline: 0px dotted !important;
   outline: 0px auto -webkit-focus-ring-color !important; }
+
+table .parent-row {
+  border-bottom: 1px solid #ecedf2; }
+
+.page-item:first-child .page-link {
+  margin-left: 0px;
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+  padding-left: 0px !important; }
+
+.result-dropdown {
+  margin-right: -8px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
@@ -13771,7 +13792,7 @@ select:focus {
 
 table .bold-heading {
   font-weight: normal;
-  color: #9A9A9A;
+  color: #4C4C4C;
   font-size: 16px;
   background: #ecedf2; }
 
