--- a/backend/css/bootstrap.css
+++ b/backend/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #39c9c2; }
+  background: #da9195; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #9d942c; }
+  background: #1e54b2; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #258284; }
+  background: #27b97d; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #bd8c26; }
+  background: #fa1320; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #6e60d6; }
+  background: #b86ea7; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #a05881; }
+  background: #5612cf; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #2532c6; }
+  background: #01192e; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #3da7ad; }
+  background: #085496; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #518b5a; }
+  background: #1de9b9; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #747ad0; }
+  background: #12a545; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #c615b7; }
+  background: #869980; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #0af3c7; }
+  background: #f16003; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #9ce330; }
+  background: #58a730; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #4d45e9; }
+  background: #cd9e04; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #2f1e27; }
+  background: #6ee0a4; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #adfd4e; }
+  background: #5025c7; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #f82c1b; }
+  background: #40ce26; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #665be6; }
+  background: #08176b; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #793863; }
+  background: #7d1fdb; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #e59acc; }
+  background: #f33050; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #fd1641; }
+  background: #42338a; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #eb3ded; }
+  background: #ef81d3; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #49f936; }
+  background: #ad63fd; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #ca956e; }
+  background: #7afe12; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #906f9d; }
+  background: #0a63b4; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #d9ef6c; }
+  background: #7fba29; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #3279e1; }
+  background: #5ff2a5; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #6e394c; }
+  background: #610890; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #9e0d65; }
+  background: #da271b; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #3d8bba; }
+  background: #3274d4; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #2e5926; }
+  background: #9ae3da; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #ce38ac; }
+  background: #88f244; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #422975; }
+  background: #0e3a80; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #605bec; }
+  background: #edd7e3; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #e09186; }
+  background: #91643f; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #cab52b; }
+  background: #ee9801; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #410401; }
+  background: #9a07c0; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #5d63cd; }
+  background: #ea1436; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #2de56f; }
+  background: #c2e862; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #a74c36; }
+  background: #7a31b7; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #cf890e; }
+  background: #59caa9; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #e18240; }
+  background: #bfca9d; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #5ff1cc; }
+  background: #57bdc3; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #031771; }
+  background: #65d619; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #3e7aee; }
+  background: #45455f; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #f51463; }
+  background: #d4287a; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #ca0811; }
+  background: #41ae05; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #deac44; }
+  background: #40212c; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #bbbdb5; }
+  background: #455a58; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #431dd2; }
+  background: #9d7445; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #55c3dd; }
+  background: #936ff5; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #2a46f2; }
+  background: #3c578f; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #fe08ab; }
+  background: #abd5e5; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #0877e0; }
+  background: #afa708; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #356108; }
+  background: #d9f871; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #353feb; }
+  background: #618f2d; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #571990; }
+  background: #f3c1c9; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #94a476; }
+  background: #6f1c74; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #0bfb96; }
+  background: #489559; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #788ec8; }
+  background: #58aa3d; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #44e0cf; }
+  background: #75561e; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #713ea0; }
+  background: #eaf4d9; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #79beea; }
+  background: #4c5b74; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #23a441; }
+  background: #95cb24; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #82ff0b; }
+  background: #b6ce49; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #92e9a2; }
+  background: #6a02a0; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #4fb72c; }
+  background: #ee8c90; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #be5c1e; }
+  background: #26e7a4; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #5b4f29; }
+  background: #a3bc4e; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #3cbc9e; }
+  background: #ab9571; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #465fe5; }
+  background: #5e70f2; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #0dd3e4; }
+  background: #427988; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #d03598; }
+  background: #cf14bb; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #d7677a; }
+  background: #5f20c4; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #4a0fbf; }
+  background: #65da05; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #297902; }
+  background: #03c877; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #9a7d25; }
+  background: #3f0ab8; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #02f427; }
+  background: #1b5b9c; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #0ef192; }
+  background: #a5d83d; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #6bcf59; }
+  background: #b3a5f8; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #d8f25e; }
+  background: #b45312; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #018e0b; }
+  background: #66a6b4; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #37b9c7; }
+  background: #ae95a9; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #b63825; }
+  background: #c269d6; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #01ab70; }
+  background: #59c3d7; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #a3155c; }
+  background: #6e9aba; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #53987d; }
+  background: #ea3ad4; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #710391; }
+  background: #0fee7d; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #08801c; }
+  background: #e970b0; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #e996e5; }
+  background: #87dff8; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #c99603; }
+  background: #8c618b; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #b97a84; }
+  background: #3391a6; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #e3b4b7; }
+  background: #0bf329; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #c55e37; }
+  background: #9da181; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #338f16; }
+  background: #f1606f; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #bfffde; }
+  background: #bd8412; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #448dc0; }
+  background: #68a4a5; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #a516ff; }
+  background: #0c176b; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #6ad2b2; }
+  background: #a517d3; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #b30a51; }
+  background: #8e36bc; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10399,6 +10399,14 @@ a {
 
 .graydient-primary-btn {
   background-image: linear-gradient(to right bottom, #a57dff, #9b79ff, #9076ff, #8472ff, #776fff); }
+
+.cancel-btn {
+  background: transparent;
+  color: #776fff;
+  padding: 14px 17px;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  border: 0px solid #ccc;
+  text-decoration: underline; }
 
 input[type="checkbox"] {
   box-sizing: border-box;
@@ -12494,6 +12502,192 @@ td .check-container {
 
 .right-party-row:last-child .right-part-items-div {
   border-bottom: 0px solid #d4d4d4; }
+
+.page-heading-breadcrumb a {
+  text-decoration: none;
+  color: #5f5f5f;
+  margin-right: 10px; }
+
+.notification-red-circle {
+  background: #f00f00;
+  color: #fff;
+  padding: 3px 6px;
+  border-radius: 100%;
+  font-size: 13px;
+  border: 1px solid white;
+  position: absolute;
+  right: 5px;
+  top: -5px; }
+
+.notification-dropdow-div {
+  min-width: auto !important;
+  border: 0px solid rgba(0, 0, 0, 0.15);
+  height: 300px; }
+
+.dropdown-menu1 {
+  background: #fff;
+  top: 8px;
+  right: -65px;
+  left: unset;
+  width: 430px;
+  box-shadow: 0px 5px 7px -1px #c1c1c1;
+  padding-bottom: 0px;
+  padding: 0px;
+  position: absolute;
+  border-radius: 0px 0px 6px 6px;
+  overflow: hidden; }
+
+.notifi-scroll {
+  height: 390px;
+  overflow-y: auto;
+  border-radius: 0px 0px 6px 6px; }
+
+.notification-dropdow-div:before {
+  content: "";
+  position: absolute;
+  top: -12px;
+  right: -22px;
+  border: 10px solid #56bcd9;
+  border-color: transparent transparent #56bcd9 transparent; }
+
+.head {
+  padding: 13px 15px;
+  border-radius: 6px 6px 0px 0px;
+  background: #56bcd9;
+  z-index: 4000;
+  position: relative; }
+  .head a {
+    margin: 0px;
+    font-size: 14px; }
+
+.notification-box {
+  background: #fff;
+  padding: 10px;
+  padding-bottom: 0px; }
+  .notification-box .row-info {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 10px; }
+
+.flex-1 {
+  flex: 1;
+  margin: 0px 10px;
+  cursor: pointer; }
+  .flex-1 .text-info {
+    color: #000 !important;
+    font-size: 14px;
+    line-height: 24px; }
+  .flex-1 .subline-text {
+    font-size: 13px; }
+
+.notification-box-gray {
+  color: #8c8c8c !important; }
+  .notification-box-gray .text-info,
+  .notification-box-gray .subline-text {
+    color: #808080 !important; }
+
+.c-red-notification {
+  padding: 3px;
+  background: #f00f00;
+  border-radius: 100%;
+  display: block;
+  width: 6px;
+  height: 6px; }
+
+.c-gray-notification {
+  padding: 3px;
+  background: #808080;
+  border-radius: 100%;
+  display: block;
+  width: 6px;
+  height: 6px; }
+
+.footer {
+  padding: 5px 15px;
+  border-radius: 0px 0px 3px 3px; }
+
+.notification-red-circle {
+  background: #f00f00;
+  color: #fff;
+  padding: 3px 6px;
+  border-radius: 100%;
+  font-size: 13px;
+  border: 1px solid white;
+  position: absolute;
+  right: 5px;
+  top: -5px; }
+
+.bg-gray {
+  background-color: #eee; }
+
+@media (max-width: 640px) {
+  .dropdown-menu1 {
+    top: 50px;
+    left: -16px;
+    width: 290px; }
+
+  .nav {
+    display: block; }
+
+  .nav .nav-item,
+  .nav .nav-item a {
+    padding-left: 0px; }
+
+  .message {
+    font-size: 13px; } }
+.notification-main-wrapper {
+  padding-bottom: 35px !important; }
+
+.notification-model-header {
+  padding-bottom: 25px !important;
+  padding-top: 25px !important; }
+  .notification-model-header .adapter-modal-name {
+    margin-left: 18px !important; }
+
+.notification-lists-wrapper table tr {
+  cursor: pointer; }
+.notification-lists-wrapper table .parent-row-gray td {
+  color: #777 !important; }
+.notification-lists-wrapper table .parent-row {
+  border-bottom: 1px solid #ecedf2; }
+  .notification-lists-wrapper table .parent-row td {
+    vertical-align: middle;
+    padding: 15px 8px 15px 0px !important;
+    color: #000; }
+  .notification-lists-wrapper table .parent-row .c-red {
+    padding: 4px;
+    background: #f00f00;
+    border-radius: 100%;
+    display: block;
+    width: 6px;
+    height: 6px;
+    margin-left: 15px; }
+  .notification-lists-wrapper table .parent-row .c-gray {
+    background: #777;
+    padding: 4px;
+    border-radius: 100%;
+    display: block;
+    width: 6px;
+    height: 6px;
+    margin-left: 15px; }
+  .notification-lists-wrapper table .parent-row .border-bottom-left {
+    border-bottom-left-radius: 0px; }
+  .notification-lists-wrapper table .parent-row .border-top-left {
+    border-top-left-radius: 0px; }
+  .notification-lists-wrapper table .parent-row .border-bottom-right {
+    border-bottom-right-radius: 0px; }
+  .notification-lists-wrapper table .parent-row .border-top-right {
+    border-top-right-radius: 0px; }
+
+.Notification-model-wrapper {
+  position: relative;
+  height: 310px; }
+  .Notification-model-wrapper .model-header-div {
+    display: flex;
+    justify-content: space-between; }
+  .Notification-model-wrapper .time-date-notify {
+    font-size: 12px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
