--- a/backend/scss/_fahad.scss
+++ b/backend/scss/_fahad.scss
@@ -2135,3 +2135,254 @@ td {
 .right-party-row:last-child .right-part-items-div {
   border-bottom: 0px solid #d4d4d4;
 }
+
+.page-heading-breadcrumb a {
+  text-decoration: none;
+  color: #5f5f5f;
+  margin-right: 10px;
+}
+
+.notification-red-circle {
+  background: #f00f00;
+  color: #fff;
+  padding: 3px 6px;
+  border-radius: 100%;
+  font-size: 13px;
+  border: 1px solid white;
+  position: absolute;
+  right: 5px;
+  top: -5px;
+}
+
+.notification-dropdow-div {
+  min-width: auto !important;
+  border: 0px solid rgba(0, 0, 0, 0.15);
+  height: 300px;
+}
+
+.dropdown-menu1 {
+  background: #fff;
+  top: 8px;
+  right: -65px;
+  left: unset;
+  width: 430px;
+  box-shadow: 0px 5px 7px -1px #c1c1c1;
+  padding-bottom: 0px;
+  padding: 0px;
+  position: absolute;
+  border-radius: 0px 0px 6px 6px;
+  overflow: hidden;
+}
+
+.notifi-scroll {
+  height: 390px;
+  overflow-y: auto;
+  border-radius: 0px 0px 6px 6px;
+}
+
+.notification-dropdow-div:before {
+  content: "";
+  position: absolute;
+  top: -12px;
+  right: -22px;
+  border: 10px solid #56bcd9;
+  border-color: transparent transparent #56bcd9 transparent;
+}
+
+.head {
+  padding: 13px 15px;
+  border-radius: 6px 6px 0px 0px;
+  background: #56bcd9;
+  z-index: 4000;
+  position: relative;
+
+  a {
+    margin: 0px;
+    font-size: 14px;
+  }
+}
+
+.notification-box {
+  background: #fff;
+  padding: 10px;
+  padding-bottom: 0px;
+
+  .row-info {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 10px;
+  }
+}
+
+.flex-1 {
+  flex: 1;
+  margin: 0px 10px;
+  cursor: pointer;
+
+  .text-info {
+    color: #000 !important;
+    font-size: 14px;
+    line-height: 24px;
+  }
+
+  .subline-text {
+    font-size: 13px;
+  }
+}
+
+.notification-box-gray {
+  color: #8c8c8c !important;
+
+  .text-info,
+  .subline-text {
+    color: #808080 !important;
+  }
+}
+
+.c-red-notification {
+  padding: 3px;
+  background: #f00f00;
+  border-radius: 100%;
+  display: block;
+  width: 6px;
+  height: 6px;
+}
+
+.c-gray-notification {
+  padding: 3px;
+  background: #808080;
+  border-radius: 100%;
+  display: block;
+  width: 6px;
+  height: 6px;
+}
+
+.footer {
+  padding: 5px 15px;
+  border-radius: 0px 0px 3px 3px;
+}
+
+.notification-red-circle {
+  background: #f00f00;
+  color: #fff;
+  padding: 3px 6px;
+  border-radius: 100%;
+  font-size: 13px;
+  border: 1px solid white;
+  position: absolute;
+  right: 5px;
+  top: -5px;
+}
+
+.bg-gray {
+  background-color: #eee;
+}
+
+@media (max-width: 640px) {
+  .dropdown-menu1 {
+    top: 50px;
+    left: -16px;
+    width: 290px;
+  }
+
+  .nav {
+    display: block;
+  }
+
+  .nav .nav-item,
+  .nav .nav-item a {
+    padding-left: 0px;
+  }
+
+  .message {
+    font-size: 13px;
+  }
+}
+
+.notification-main-wrapper {
+  padding-bottom: 35px !important;
+}
+
+.notification-model-header {
+  padding-bottom: 25px !important;
+  padding-top: 25px !important;
+
+  .adapter-modal-name {
+    margin-left: 18px !important;
+  }
+}
+
+.notification-lists-wrapper {
+  table {
+    tr {
+      cursor: pointer;
+    }
+
+    .parent-row-gray {
+      td {
+        color: #777 !important;
+      }
+    }
+
+    .parent-row {
+      border-bottom: 1px solid #ecedf2;
+
+      td {
+        vertical-align: middle;
+        padding: 15px 8px 15px 0px !important;
+        color: #000;
+      }
+
+      .c-red {
+        padding: 4px;
+        background: #f00f00;
+        border-radius: 100%;
+        display: block;
+        width: 6px;
+        height: 6px;
+        margin-left: 15px;
+      }
+
+      .c-gray {
+        background: #777;
+        padding: 4px;
+        border-radius: 100%;
+        display: block;
+        width: 6px;
+        height: 6px;
+        margin-left: 15px;
+      }
+
+      .border-bottom-left {
+        border-bottom-left-radius: 0px;
+      }
+
+      .border-top-left {
+        border-top-left-radius: 0px;
+      }
+
+      .border-bottom-right {
+        border-bottom-right-radius: 0px;
+      }
+
+      .border-top-right {
+        border-top-right-radius: 0px;
+      }
+    }
+  }
+}
+
+.Notification-model-wrapper {
+  position: relative;
+  height: 310px;
+
+  .model-header-div {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .time-date-notify {
+    font-size: 12px;
+  }
+}
