--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8674,205 +8674,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #e419f5; }
+  background: #fdbed6; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #7b2390; }
+  background: #6ba0bb; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #58073b; }
+  background: #ae8b3b; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #8ed522; }
+  background: #82b72b; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #bdb081; }
+  background: #f38389; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #6e618f; }
+  background: #9b98db; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #cf1b3b; }
+  background: #1f0ec7; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #6164c0; }
+  background: #6168f6; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #08f403; }
+  background: #5ec17d; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #08663e; }
+  background: #013947; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #1c101b; }
+  background: #6c9997; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #977311; }
+  background: #298ac8; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #883efb; }
+  background: #9f4494; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #1e0dfe; }
+  background: #fdc459; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #ab91d3; }
+  background: #9357ce; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #fbd756; }
+  background: #0c9725; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #e360b4; }
+  background: #d6e464; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #bc7d11; }
+  background: #639bea; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #c075b8; }
+  background: #93866a; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #409c03; }
+  background: #b7adf3; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #29f152; }
+  background: #8279fc; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #9c0779; }
+  background: #efe08d; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #eb7cac; }
+  background: #7d4cd7; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #8b8c95; }
+  background: #913bed; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #283f68; }
+  background: #f4a5c7; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #835312; }
+  background: #3e9ecd; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #2d48b2; }
+  background: #a492fb; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #6f7896; }
+  background: #7579d0; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #29e694; }
+  background: #ef927c; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #985638; }
+  background: #104e89; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #6a851e; }
+  background: #d65e6d; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #e71e5e; }
+  background: #145747; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #856e73; }
+  background: #0a0d87; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #ce334f; }
+  background: #653f3f; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #83af07; }
+  background: #6865ff; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #892794; }
+  background: #c20729; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #394cf4; }
+  background: #6d1c4f; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #c493d7; }
+  background: #14e7b2; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #9472ed; }
+  background: #79aaaa; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #ce1548; }
+  background: #70bb48; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #13902b; }
+  background: #df9d49; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #5f77f3; }
+  background: #6be395; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #c3a4c2; }
+  background: #bbc5c5; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #d9a151; }
+  background: #93e6d4; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #a131ac; }
+  background: #34541a; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #591090; }
+  background: #30fbfb; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #10d458; }
+  background: #b0bd23; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #ef5cb7; }
+  background: #5855ba; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #f981f6; }
+  background: #59343f; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #a5f80c; }
+  background: #a3aed6; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #8bbccd; }
+  background: #071fc8; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #8146c9; }
+  background: #c98415; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #8bcd7d; }
+  background: #fa3635; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #7de94d; }
+  background: #8a9957; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #af746c; }
+  background: #c733c5; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #9b02c1; }
+  background: #b3324a; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #98afdd; }
+  background: #4c1e63; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #a2e7a3; }
+  background: #5c253f; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #89757a; }
+  background: #77f77d; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #e37204; }
+  background: #7919a9; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #efa0b0; }
+  background: #cd1c75; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #f6b217; }
+  background: #78a44e; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #4eead3; }
+  background: #0b4f20; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #3b02a5; }
+  background: #31db19; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #cca137; }
+  background: #bec427; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #8d3655; }
+  background: #a5c9fb; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #8b8224; }
+  background: #3f6a4b; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #c2e541; }
+  background: #816b31; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #c14dab; }
+  background: #60fadd; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #d8754f; }
+  background: #b8876f; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #6c2583; }
+  background: #6b1b7c; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #5a1d1c; }
+  background: #555e13; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #245434; }
+  background: #e10bee; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #2958b1; }
+  background: #330421; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #bf5899; }
+  background: #434d2f; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #5b5fa0; }
+  background: #8d5ae7; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #99fb9e; }
+  background: #6ad332; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #284067; }
+  background: #081783; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #71846f; }
+  background: #4e78ac; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #6b8c4b; }
+  background: #c9c82b; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #48fd16; }
+  background: #de9d5a; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #f8e441; }
+  background: #5ef82a; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #7c59cf; }
+  background: #1b4eab; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #109ef1; }
+  background: #c89580; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #094ade; }
+  background: #4ae48b; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #c9ac0b; }
+  background: #252799; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #3dbc71; }
+  background: #e3a28a; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #55e455; }
+  background: #aa7467; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #babc24; }
+  background: #84f72b; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #cbfc94; }
+  background: #447065; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #73bd47; }
+  background: #8a8557; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #307d13; }
+  background: #e5e506; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #60cc04; }
+  background: #01964c; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #4ad17d; }
+  background: #ab764b; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #6d1182; }
+  background: #197449; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #f8b41c; }
+  background: #2f63d8; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #f0c0e4; }
+  background: #4089fa; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #333808; }
+  background: #9ea299; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #cf71bb; }
+  background: #1867b8; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #55a1f8; }
+  background: #32e392; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
